--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "mo-cli-react",
+  "name": "mo-easy-cli",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./dist/index.js",
   "bin": {
-    "mo": "index.js"
+    "mo": "./dist/index.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "rollup -c && npm link"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +17,16 @@
     "commander": "^6.1.0",
     "download-git-repo": "^3.0.2",
     "ejs": "^3.1.8",
-    "open": "^8.4.0"
+    "open": "^8.4.0",
+    "shelljs": "^0.8.5"
+  },
+  "devDependencies": {
+    "@rollup/plugin-commonjs": "^24.0.1",
+    "@rollup/plugin-json": "^6.0.0",
+    "@types/node": "^18.11.18",
+    "rollup": "^3.13.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-typescript2": "^0.34.1",
+    "typescript": "^4.9.5"
   }
 }
