--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rollup -c && npm link"
+    "build": "rollup -c --bundleConfigAsCjs && npm link"
   },
   "keywords": [],
   "author": "",
@@ -17,8 +17,8 @@
     "commander": "^6.1.0",
     "download-git-repo": "^3.0.2",
     "ejs": "^3.1.8",
-    "open": "^8.4.0",
-    "shelljs": "^0.8.5"
+    "inquirer": "^8.0.0",
+    "open": "^8.4.0"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^24.0.1",
